[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Menu_Screen.gd" type="Script" id=1]
[ext_resource path="res://assets/PNG/750*1334.png" type="Texture" id=2]
[ext_resource path="res://assets/PNG/320*90.png" type="Texture" id=3]

[node name="Menu_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Game_Modes" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -300.0
margin_right = 1.0
margin_bottom = -22.0
rect_min_size = Vector2( 320, 278 )
rect_scale = Vector2( 2, 2 )

[node name="Button1" type="TextureButton" parent="Game_Modes"]
margin_right = 320.0
margin_bottom = 90.0
rect_min_size = Vector2( 320, 90 )
texture_normal = ExtResource( 3 )

[node name="Button2" type="TextureButton" parent="Game_Modes"]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 184.0
texture_normal = ExtResource( 3 )

[node name="Button3" type="TextureButton" parent="Game_Modes"]
margin_top = 188.0
margin_right = 320.0
margin_bottom = 278.0
rect_min_size = Vector2( 320, 90 )
texture_normal = ExtResource( 3 )

[connection signal="button_up" from="Game_Modes/Button1" to="." method="_on_Button1_button_up"]
[connection signal="button_up" from="Game_Modes/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="Game_Modes/Button3" to="." method="_on_Button3_button_up"]
